--- a/index.html
+++ b/index.html
@@ -39,78 +39,16 @@
 </head>
 <body>
 
-<div class="video-container">
-  <video controls width="400">
-    <source src="./video1.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
-  <h2 class="video-title video-title-1">智能体识别仿真</h2>
-</div>
-
-<div class="video-container">
-  <video controls width="400">
-    <source src="./video2.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
-  <h2 class="video-title video-title-2">多智能体单任务仿真</h2>
-</div>
-
 <!-- 添加更多视频和标题 -->
 <div class="video-container">
-  <video controls width="400">
-    <source src="./video3.mp4" type="video/mp4">
+  <video controls width="1500">
+    <source src="./FVideo.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
-  <h2 class="video-title video-title-3">多智能体多任务仿真</h2>
+  <h3 class="video-title video-title">多智能体多任务仿真</h3>
 </div>
 
-<div class="video-container">
-  <video controls width="400">
-    <source src="./video4.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
-  <h2 class="video-title video-title-4">仿真视频4</h2>
-</div>
 
-<div class="video-container">
-  <video controls width="400">
-    <source src="./video5.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
-  <h2 class="video-title video-title-5">仿真视频5</h2>
-</div>
-
-<div class="video-container">
-  <video controls width="400">
-    <source src="./video6.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
-  <h2 class="video-title video-title-6">仿真视频6</h2>
-</div>
-
-<div class="video-container">
-  <video controls width="400">
-    <source src="./video7.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
-  <h2 class="video-title video-title-7">仿真视频7</h2>
-</div>
-
-<div class="video-container">
-  <video controls width="400">
-    <source src="./video8.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
-  <h2 class="video-title video-title-8">仿真视频8</h2>
-</div>
-
-<div class="video-container">
-  <video controls width="400">
-    <source src="./video9.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
-  <h2 class="video-title video-title-8">仿真视频9</h2>
-</div>
 
 </body>
 </html>
